# LogWatch

./: .gitignore  README.md  pyproject.toml
logwatch_pkg/: __init__.py  core.py
